# bazel-monorepo

./: .gitignore  WORKSPACE.bazel  bazel-bazel-monorepo  bazel-bin  bazel-multi-language-bazel-monorepo  bazel-out  bazel-testlogs
.github/workflows/: main.yaml
projects/calculator/: BUILD.bazel  calculator_test.py
projects/my-python-app/: BUILD  main.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
