load("@rules_python//python:defs.bzl", "py_binary")

py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [
        "//projects/calculator:calculator",
    ]
)